log/build_2024-12-04_13-09-28/manager/stderr.log
  File "/home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager/manager.py", line 249
    self.send_tag_request(self.apriltag, self.task):
                                                   ^
SyntaxError: invalid syntax

